--- a/app/views/admin/text_blocks/edit_multiple.html.erb
+++ b/app/views/admin/text_blocks/edit_multiple.html.erb
@@ -26,9 +26,9 @@
                 </div>
               </div>
             </div>
-            <div>
+            <div class="flex items-center">
               <div class="grid grid-flow-col items-end">
-                <div class="ml-2 inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
+                <div class="ml-2 inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
                   </svg>
@@ -50,9 +50,9 @@
                 </div>
               </div>
             </div>
-            <div>
+            <div class="flex items-center">
               <div class="grid grid-flow-col items-end">
-                <div class="ml-2 inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
+                <div class="ml-2 inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
                   </svg>
@@ -68,12 +68,14 @@
     <% @text_blocks.each do |block| %>
 
       <div class="mt-3 flex justify-stretch grid grid-cols-2 grid-flow-col max-w-screen-2xl">
-        <%= form_with model: [:admin, block], url: admin_text_block_path(id: block.original_id), method: :put do |form| %>
-          <div id="<%= block.original_id %>" class="col-span-1">
+
+        <div id="<%= block.original_id %>" class="col-span-1">
+          <% if block.original_id %>
             <div class="mr-3 bg-mountbatten-100 px-3 rounded-md ring-2 ring-mountbatten-500">
-              <div class="sm:items-start sm:divide-x sm:gap-4 sm:py-3 w-full">
+
+              <div class="sm:items-start sm:gap-4 sm:py-3 w-full">
                 <div class="mb-2 flex justify-between grid grid-flow-col w-full">
-                  <div>
+                  <div class="flex items-center">
                     <div class="grid justify-items-start">
                       <div class="inline-flex">
                         <%= "KA-#{block.order_number}" %>
@@ -92,21 +94,29 @@
                           <path stroke-linecap="round" stroke-linejoin="round" d="m7.848 8.25 1.536.887M7.848 8.25a3 3 0 1 1-5.196-3 3 3 0 0 1 5.196 3Zm1.536.887a2.165 2.165 0 0 1 1.083 1.839c.005.351.054.695.14 1.024M9.384 9.137l2.077 1.199M7.848 15.75l1.536-.887m-1.536.887a3 3 0 1 1-5.196 3 3 3 0 0 1 5.196-3Zm1.536-.887a2.165 2.165 0 0 0 1.083-1.838c.005-.352.054-.695.14-1.025m-1.223 2.863 2.077-1.199m0-3.328a4.323 4.323 0 0 1 2.068-1.379l5.325-1.628a4.5 4.5 0 0 1 2.48-.044l.803.215-7.794 4.5m-2.882-1.664A4.33 4.33 0 0 0 10.607 12m3.736 0 7.794 4.5-.802.215a4.5 4.5 0 0 1-2.48-.043l-5.326-1.629a4.324 4.324 0 0 1-2.068-1.379M14.343 12l-2.882 1.664" />
                         </svg>
                       </div>
-                      <div class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
+                      <button type="button"
+                              data-controller="delete-record"
+                              data-delete-record-url-value="<%= admin_text_block_path(id: block.original_id) %>"
+                              data-delete-record-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id) %>"
+                              data-action="click->delete-record#submit"
+                              class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                           <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
                         </svg>
-                      </div>
+                      </button>
                     </div>
                   </div>
                 </div>
-                <div class="mt-2 sm:mt-0 w-full">
-                  <%= form.text_area :original_contents, name: "text_block[contents]", rows: 8, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
-                </div>
+                <%= form_with model: [:admin, block], url: admin_text_block_path(id: block.original_id), method: :put do |form| %>
+                  <div class="mt-2 sm:mt-0 w-full">
+                    <%= form.text_area :original_contents, name: "text_block[contents]", rows: 8, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
+                  </div>
+                  <div class="mt-3 grid w-full justify-items-end">
+                    <button type="submit" class="inline-flex justify-center rounded-md bg-mountbatten-500 ring-2 ring-mountbatten-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500">შენახვა</button>
+                  </div>
+                <% end %>
               </div>
-              <div class="pb-3 grid w-full justify-items-end">
-                <button type="submit" class="inline-flex justify-center rounded-md bg-mountbatten-500 ring-2 ring-mountbatten-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500">შენახვა</button>
-              </div>
+
             </div>
 
             <div class="mr-3 mt-3 grid grid-flow-col justify-items-end">
@@ -121,24 +131,24 @@
                     <path stroke-linecap="round" stroke-linejoin="round" d="M3 7.5 7.5 3m0 0L12 7.5M7.5 3v13.5m13.5 0L16.5 21m0 0L12 16.5m4.5 4.5V7.5" />
                   </svg>
                 </div>
-                <div class="inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
+                <%= button_to admin_text_blocks_path(last_text_block_id: block.original_id), method: :post, class: "inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
                   </svg>
-                </div>
+                <% end %>
               </div>
             </div>
-          </div>
+          <% end %>
+        </div>
 
-        <% end %>
 
-        <%= form_with model: [:admin, block], url: admin_text_block_path(id: block.translation_id), method: :put do |form| %>
-          <div id="<%= block.translation_id %>" class="col-span-1">
-
+        <div id="<%= block.translation_id %>" class="col-span-1">
+          <% if block.translation_id %>
             <div class="ml-3 bg-gray-100 px-3 rounded-md ring-2 ring-gray-500">
-              <div class="sm:items-start sm:divide-x sm:gap-4 sm:py-3 w-full">
+
+              <div class="sm:items-start sm:gap-4 sm:py-3 w-full">
                 <div class="mb-2 flex justify-between grid grid-flow-col w-full">
-                  <div>
+                  <div class="flex items-center">
                     <div class="grid justify-items-start">
                       <div class="inline-flex">
                         <%= "EN-#{block.order_number}" %>
@@ -157,21 +167,32 @@
                           <path stroke-linecap="round" stroke-linejoin="round" d="m7.848 8.25 1.536.887M7.848 8.25a3 3 0 1 1-5.196-3 3 3 0 0 1 5.196 3Zm1.536.887a2.165 2.165 0 0 1 1.083 1.839c.005.351.054.695.14 1.024M9.384 9.137l2.077 1.199M7.848 15.75l1.536-.887m-1.536.887a3 3 0 1 1-5.196 3 3 3 0 0 1 5.196-3Zm1.536-.887a2.165 2.165 0 0 0 1.083-1.838c.005-.352.054-.695.14-1.025m-1.223 2.863 2.077-1.199m0-3.328a4.323 4.323 0 0 1 2.068-1.379l5.325-1.628a4.5 4.5 0 0 1 2.48-.044l.803.215-7.794 4.5m-2.882-1.664A4.33 4.33 0 0 0 10.607 12m3.736 0 7.794 4.5-.802.215a4.5 4.5 0 0 1-2.48-.043l-5.326-1.629a4.324 4.324 0 0 1-2.068-1.379M14.343 12l-2.882 1.664" />
                         </svg>
                       </div>
-                      <div class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
+                      <button type="button"
+                              data-controller="delete-record"
+                              data-delete-record-url-value="<%= admin_text_block_path(id: block.translation_id) %>"
+                              data-delete-record-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id) %>"
+                              data-action="click->delete-record#submit"
+                              class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                           <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
                         </svg>
-                      </div>
+                      </button>
                     </div>
                   </div>
                 </div>
-                <div class="mt-2 sm:mt-0 w-full">
-                  <%= form.text_area :translation_contents, name: "text_block[contents]", rows: 8, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
-                </div>
+                <%= form_with model: [:admin, block], url: admin_text_block_path(id: block.translation_id), method: :put do |form| %>
+
+                  <div class="mt-2 sm:mt-0 w-full">
+                    <%= form.text_area :translation_contents, name: "text_block[contents]", rows: 8, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
+                  </div>
+                  <div class="mt-3 grid w-full justify-items-end">
+                    <button type="submit" class="inline-flex justify-center rounded-md bg-mountbatten-500 ring-2 ring-mountbatten-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500">Save</button>
+                  </div>
+                <% end %>
               </div>
-              <div class="pb-3 grid w-full justify-items-end">
-                <button type="submit" class="inline-flex justify-center rounded-md bg-mountbatten-500 ring-2 ring-mountbatten-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500">Save</button>
-              </div>
+
+
+
             </div>
 
             <div class="mt-3 grid grid-flow-col justify-items-end">
@@ -186,18 +207,16 @@
                     <path stroke-linecap="round" stroke-linejoin="round" d="M3 7.5 7.5 3m0 0L12 7.5M7.5 3v13.5m13.5 0L16.5 21m0 0L12 16.5m4.5 4.5V7.5" />
                   </svg>
                 </div>
-                <div class="inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
+                <%= button_to admin_text_blocks_path(last_text_block_id: block.translation_id), method: :post, class: "inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
                   </svg>
-                </div>
+                <% end %>
               </div>
             </div>
-
-          </div>
+          <% end %>
         </div>
-
-      <% end %>
+      </div>
     <% end %>
 
     </div>
