--- a/app/views/admin/text_blocks/edit_multiple.html.erb
+++ b/app/views/admin/text_blocks/edit_multiple.html.erb
@@ -1,8 +1,7 @@
 <%= render 'admin/shared/heading', name: 'ტექსტური წყვილების რედაქტირება' %>
 
-<main>
+<main data-controller="scroll-to" data-scroll-to-anchor-value="<%= @anchored_block.present? ? "text-block-#{@anchored_block.id}" : nil %>">
   <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-8">
-
     <% crumbs = [] %>
     <% crumbs << { name: @collection.supergroup.name_ka, url: admin_groups_path(supergroup_id: @collection.supergroup.id) } %>
     <% crumbs << { name: @collection.group.name_ka, url: admin_collections_path(group_id: @collection.group.id) } %>
@@ -10,66 +9,76 @@
 
     <%= render 'admin/shared/breadcrumbs', crumbs: crumbs unless crumbs.empty? %>
 
+    <%= link_to admin_text_blocks_path(format: "xlsx"), class: "mt-4 inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
+      </svg>
+      .xlsx
+    <% end %>
 
-    <%= form_for @search, url: edit_multiple_admin_text_blocks_path(collection_id: @collection.id), method: :get do |form| %>
-      <div class="mt-8 flex justify-stretch grid grid-cols-2 grid-flow-col max-w-screen-2xl">
-        <div class="mr-3 col-span-1 space-y-3 sm:space-y-4">
-
-          <div class="flex justify-between grid grid-flow-col w-full">
-            <div>
+    <div class="mt-8 flex justify-stretch grid grid-cols-2 grid-flow-col max-w-screen-2xl">
+      <div class="mr-3 col-span-1 space-y-3 sm:space-y-4">
+        <div class="flex justify-between grid grid-flow-col w-full">
+          <div>
+            <%= form_for @search, url: edit_multiple_admin_text_blocks_path(collection_id: @collection.id), method: :get do |form| %>
+              <%= form.hidden_field :collection_id, name: :collection_id %>
               <div class="grid grid-flow-col space-x-2 justify-items-start">
                 <div class="inline-flex">
-                  <%= form.text_field :order_number, placeholder: "ID-თი ძიება", class: "max-w-[120px] bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
+                  <%= form.text_field :order_number, name: :order_number, placeholder: "ID-თი ძიება", class: "max-w-[120px] bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
                 </div>
                 <div class="inline-flex">
-                  <%= form.text_field :original_contents, placeholder: "ტექსტით ძიება", class: "max-w-[180px] bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
+                  <%= form.text_field :original_contents, name: :original_contents, placeholder: "ტექსტით ძიება", class: "max-w-[180px] bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
                 </div>
+                <input type="submit" value="Submit">
               </div>
-            </div>
-            <div class="flex items-center">
-              <div class="grid grid-flow-col items-end">
-                <div class="ml-2 inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
-                  </svg>
-                </div>
-              </div>
-            </div>
+            <% end %>
           </div>
-        </div>
-        <div class="ml-3 col-span-1 space-y-3 sm:space-y-4">
-
-          <div class="flex justify-between grid grid-flow-col w-full">
-            <div>
-              <div class="grid grid-flow-col space-x-2 justify-items-start">
-                <div class="inline-flex">
-                  <%= form.text_field :order_number, placeholder: "Search by ID", class: "max-w-[120px] bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
-                </div>
-                <div class="inline-flex">
-                  <%= form.text_field :translation_contents, placeholder: "Search by text", class: "max-w-[180px] bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
-                </div>
-              </div>
-            </div>
-            <div class="flex items-center">
-              <div class="grid grid-flow-col items-end">
-                <div class="ml-2 inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
-                  </svg>
-                </div>
+          <div class="flex items-center">
+            <div class="grid grid-flow-col items-end">
+              <div class="ml-2 inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
+                </svg>
+                ka.docx
               </div>
             </div>
           </div>
         </div>
       </div>
-    <% end %>
+      <div class="ml-3 col-span-1 space-y-3 sm:space-y-4">
+        <div class="flex justify-between grid grid-flow-col w-full">
+          <div>
+            <%= form_for @search, url: edit_multiple_admin_text_blocks_path(collection_id: @collection.id), method: :get do |form| %>
+              <%= form.hidden_field :collection_id, name: :collection_id %>
+              <div class="grid grid-flow-col space-x-2 justify-items-start">
+                <div class="inline-flex">
+                  <%= form.text_field :order_number, name: :order_number, placeholder: "Search by ID", class: "max-w-[120px] bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
+                </div>
+                <div class="inline-flex">
+                  <%= form.text_field :translation_contents, name: :translation_contents, placeholder: "Search by text", class: "max-w-[180px] bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
+                </div>
+                <input type="submit" value="Submit">
+              </div>
+            <% end %>
+          </div>
+          <div class="flex items-center">
+            <div class="grid grid-flow-col items-end">
+              <div class="ml-2 inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
+                </svg>
+                en.docx
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
     <% @text_blocks.each do |block| %>
-
       <div class="mt-3 flex justify-stretch grid grid-cols-2 grid-flow-col max-w-screen-2xl">
-
-        <div id="<%= block.original_id %>" class="col-span-1">
+        <div id="text-block-<%= block.id %>" class="col-span-1">
           <% if block.original_id %>
             <div class="mr-3 bg-mountbatten-100 px-3 rounded-md ring-2 ring-mountbatten-500">
 
@@ -142,7 +151,7 @@
         </div>
 
 
-        <div id="<%= block.translation_id %>" class="col-span-1">
+        <div id="text-block-<%= block.id %>" class="col-span-1">
           <% if block.translation_id %>
             <div class="ml-3 bg-gray-100 px-3 rounded-md ring-2 ring-gray-500">
 
